--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
